cluster/apps/default/reimbursat0r/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reimbursat0r
  namespace: default
  labels:
    app: reimbursat0r
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: reimbursat0r
  template:
    metadata:
      labels:
        app: reimbursat0r
    spec:
      imagePullSecrets:
        - name: global-docker-config
      containers:
        - name: reimbursat0r
          image: ghcr.io/yoyostile/reimbursat0r:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /up
              port: 80
              scheme: HTTP
            periodSeconds: 5
            failureThreshold: 24
          livenessProbe:
            httpGet:
              path: /up
              port: 80
              scheme: HTTP
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /up
              port: 80
              scheme: HTTP
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
