cluster/apps/default/reimbursat0r/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reimbursat0r
  namespace: default
spec:
  selector:
    app: reimbursat0r
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
