cluster/apps/default/reimbursat0r/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reimbursat0r
  namespace: default
  annotations:
    hajimari.io/appName: "reimbursat0r"
    hajimari.io/enable: "true"
    hajimari.io/icon: "cash-multiple"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-ips-only@kubernetescrd"
    external-dns/internal: "true"
spec:
  ingressClassName: "traefik-internal"
  tls:
    - hosts:
        - "reimbursat0r.${SECRET_LAB_DOMAIN}"
      secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
  rules:
    - host: "reimbursat0r.${SECRET_LAB_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reimbursat0r
                port:
                  name: http
